# environments_mpm

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
envtest/: __init__.py  builtins.py
scripts/: my_pandas.py  random_numpy_array.py  smooth_image.py  solve_matrix_equation.py
