[build-system]
requires = ["setuptools>=64", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envtest"
description = "Playing with virtual environments"
version = "0.1.0"
dynamic = ["readme", "authors"]
dependencies = []

[tool.setuptools.packages]
find = {where=["envtest"]}

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"


